welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:5: error: '=' expected but ';' found.
while (!estSurBiscuit)
^